--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,29 +8,20 @@
 
 .input {
   flex-grow: 1;
-  padding: 10px 15px;
+  padding: 10px;
   border: 1px solid #dfe1e5;
-  border-radius: 24px 0 0 24px;
-  font-size: 1rem;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  color: #5E56E7;
   outline: none;
-  transition: box-shadow 0.2s ease;
+  background-color: #F0F0F6;
+  transition: box-shadow 0.2s ease, border-color 0.2s ease, background-color 0.2s ease, border-width 0.2s ease;
 }
 
 .input:focus {
-  box-shadow: 0 0 0 2px #4285f4;
-}
-
-.button {
-  padding: 10px 20px;
-  background-color: #4285f4;
-  color: white;
-  border: none;
-  border-radius: 0 24px 24px 0;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.2s ease;
-}
-
-.button:hover {
-  background-color: #3367d6;
+  box-shadow: 0 0 0 2px #5E56E7;
+  border-color: #5E56E7;
+  background-color: #F8F7FF;
+  border-width: 0.5px;
+  border-style: solid;
 }
