--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,26 +4,24 @@
   padding: 16px 0;
   border-bottom: 1px solid #e0e0e0;
   margin-bottom: 20px;
+  column-gap: 20px;
 }
 
 .title {
   margin: 0;
-  font-size: 1.8rem;
-  color: #202124;
-  flex-grow: 1;
+  font-size: 30px;
+  color: #5E56E7;
+  /* flex-grow: 1; */
   text-align: center;
+  font-weight: 500;
 }
 
 .backButton {
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   cursor: pointer;
   padding: 8px;
-  color: #5f6368;
+  color: #5E56E7;
   transition: color 0.2s ease;
-}
-
-.backButton:hover {
-  color: #202124;
 }
