--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+@import url('./assets/fonts.css');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f8f9fa;
@@ -20,6 +25,7 @@ a {
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
+
   .categoriesGrid,
   .booksGrid {
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
@@ -27,6 +33,7 @@ a {
 }
 
 @media (max-width: 480px) {
+
   .categoriesGrid,
   .booksGrid {
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
